--- a/package.json
+++ b/package.json
@@ -1,20 +1,89 @@
 {
-  "name": "pocketcity2-save-editor",
-  "version": "0.0.3",
-  "description": "",
-  "main": "index.js",
+  "name": "shadcn-dashboard",
+  "version": "0.1.0",
+  "private": true,
+  "main": "electron/main.js",
   "scripts": {
-    "start": "electron ./electron/main.js"
+    "dev": "vite",
+    "build:backend": "node scripts/build-backend.cjs",
+    "build": "vite build && node scripts/build-backend.cjs",
+    "lint": "eslint",
+    "electron:dev": "node scripts/build-backend.cjs && vite & electron . --dev",
+    "electron:build": "vite build && node scripts/build-backend.cjs && electron-builder --win",
+    "electron:pack": "vite build && node scripts/build-backend.cjs && electron-builder --dir"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "build": {
+    "appId": "com.pocketcity.save-editor",
+    "productName": "Pocket City Save Editor",
+    "asar": false,
+    "files": [
+      "electron/**/*",
+      "dist/**/*",
+      "public/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release"
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": null
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
   "dependencies": {
-    "electron": "^38.1.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "json5": "^2.2.3",
-    "pako": "^2.1.0"
+    "lucide-react": "^0.560.0",
+    "motion": "^12.23.26",
+    "pako": "^2.1.0",
+    "react": "19.2.2",
+    "react-dom": "19.2.2",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
+    "rough-notation": "^0.5.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "electron-winstaller",
+      "esbuild",
+      "sharp",
+      "unrs-resolver"
+    ]
   },
   "devDependencies": {
-    "electron-builder": "^26.0.12"
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.0",
+    "@types/pako": "^2.0.4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "electron": "^36.3.1",
+    "electron-builder": "^26.0.12",
+    "esbuild": "^0.27.3",
+    "eslint": "^9.39.1",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
